# VIEWS-Challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  api.py  models.py  pyproject.toml  run.py
.github/workflows/: validate.yml
.my_venv/: pyvenv.cfg
src/views_challenge/: main.py  utils.py
src/views_challenge/api/: api.py  db.py  keys_handler.py
src/views_challenge/configs/: config.py
src/views_challenge/data/: data.py  handler.py  models.py  statistics.py
src/views_challenge/database/: database.py  models.py
src/views_challenge/utils/: caching.py  utils.py
tests/: test_api.py  test_utils.py
