[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "views-challenge"
version = "0.1.0"
description = "VIEWS Challenge: Turning Conflict Forecasts into Accessible APIs"
readme = "README.md"
keywords = []
authors = [
    { name = "Radu", email = "" },
    { name = "Caleb", email = "" },
    { name = "Charles", email = "" }
]

requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.26.0",
    "pydantic>2.11.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx"
]

[project.scripts]
myapp = "views_challenge.__main__:main"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "N"]  # "N" enables naming rules
