[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "views-challenge"
version = "0.1.0"
description = "VIEWS Challenge: Turning Conflict Forecasts into Accessible APIs"
readme = "README.md"
keywords = []
authors = [
    { name = "Radu", email = "" },
    { name = "Caleb", email = "" },
    { name = "Charles", email = "" }
]

requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn>=0.36.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.0",
    "pandas>=1.4.4",
    "torch>=2.8.0",
    "joblib>=1.5.0",
    "tqdm>=4.66.0",
    "scipy>=1.16.0",
    "matplotlib>=3.10.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx"
]

[project.scripts]
myapp = "views_challenge.__main__:main"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "N"]  # "N" enables naming rules
